[package]
name = "rnix-json"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
strum = "0.26.2"
rnix = "0.11.0"
rowan = { version = "0.15.15", features = ["serde1"]}

[[bin]]
name = "rnix-json"
path = "src/main.rs"

[lib]
name = "rnix_json"
path = "src/lib.rs"